# aipc

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  main.cpp  opencv-mobile-setup.sh  start_app.sh
assets/: install_rsync.sh  preview_frontend.sh  start_app.sh  stop_app.sh
cmake/: toolchain-luckfox-pico.cmake
docs/: Luckfox RKMPI 示例的资源管理.md  VI_VENC绑定模式下的Buffer配置问题.md  coding_style.md  关于动态库.md  单核CPU优化重构.md  双模切换架构设计.md  推理结果展示.md  视频流与 AI 推理链路分析.md
src/: CMakeLists.txt  http.cpp  http.h  main.cpp  stream_manager.cpp  stream_manager.h  thread_stream.cpp  thread_stream.h
src/ai/: AIManager.cpp  AIManager.hpp  IAIEngine.hpp  NoAIEngine.hpp  Types.h
src/ai/osd/: Osd.cpp
src/ai/retinaface/: RetinaFaceEngine.cpp  RetinaFaceEngine.hpp
src/ai/yolov5/: YoloV5Engine.cpp  YoloV5Engine.hpp
src/comm/: CommandListener.cpp  CommandListener.hpp
src/common/: CMakeLists.txt  asio_context.h  logger.h  media_buffer.h
src/engine/: AIManager.cpp  AIManager.hpp  IAIEngine.hpp  NoAIEngine.hpp  RetinaFaceEngine.cpp  RetinaFaceEngine.hpp  Types.h  YoloV5Engine.cpp  YoloV5Engine.hpp  rknn_box_priors.h
src/file/: CMakeLists.txt  README.md  file_saver.cpp  file_saver.h  thread_file.cpp  thread_file.h
src/http/: HttpServer.cpp  HttpServer.hpp
src/httpserver/: README.md  http_server.h
src/media_distribution/: stream_manager.cpp
src/media_producer/: CMakeLists.txt  README.md  i_media_producer.h  media_manager.cpp  media_manager.h
src/media_producer/common/: CMakeLists.txt  image_utils.h
src/media_producer/retainface/: CMakeLists.txt  mpi_config.h  retinaface_model.cpp  retinaface_model.h  retinaface_producer.cpp  retinaface_producer.h
src/media_producer/rknn/: CMakeLists.txt
src/media_producer/rkvideo/: CMakeLists.txt  luckfox_mpi.h
src/media_producer/simple_ipc/: mpi_config.h  simple_ipc_producer.cpp  simple_ipc_producer.h
src/media_producer/yolov5/: CMakeLists.txt  mpi_config.h  yolo_producer.cpp  yolo_producer.h  yolov5_model.cpp  yolov5_model.h
src/osd/: Osd.cpp  Osd.hpp
src/rkmpi/: CMakeLists.txt  Check.hpp  IspSession.hpp  MbBlock.hpp  MbPool.hpp  MpiSystem.hpp  README.md  Time.cpp  Time.hpp  luckfox_mpi.cpp  luckfox_mpi.h  rkmpi.h
src/rknn/: CMakeLists.txt  README.md  ai_engine.cpp  ai_engine.h  ai_model_base.cpp  ai_model_base.h  ai_service.cpp  ai_service.h  ai_types.h  image_utils.cpp  image_utils.h  retinaface_model.cpp  retinaface_model.h  serial_frame_processor.cpp  serial_frame_processor.h  yolov5_model.cpp  yolov5_model.h
src/rkvideo/: CMakeLists.txt  README.md  ai_frame_processor.cpp  ai_frame_processor.h  luckfox_mpi.cpp  luckfox_mpi.h  osd_overlay.cpp  osd_overlay.h  pipeline_manager.cpp  pipeline_manager.h  pipeline_mode.h  rkvideo.cpp  rkvideo.h  serial_pipeline.cpp  serial_pipeline.h  stream_dispatcher.h
src/rtsp/: CMakeLists.txt  RtspStreamer.cpp  RtspStreamer.hpp  rk_rtsp.cpp  rk_rtsp.h  thread_rtsp.cpp  thread_rtsp.h
src/utils/: Logging.cpp  Logging.hpp  postprocess.cpp  postprocess.h
src/venc/: VencSession.hpp  venc.cpp  venc.h
src/vi/: ViSession.hpp  vi.cpp  vi.h
src/video/: VencSession.hpp  ViSession.hpp
src/webrtc/: CMakeLists.txt  README.md  SelfTest.cpp  SelfTest.hpp  WebRTCStreamer.cpp  WebRTCStreamer.hpp  thread_webrtc.cpp  thread_webrtc.h  webrtc.cpp  webrtc.h
src/wspreview/: ws_preview.cpp  ws_preview.h
www/: admin.html  client.js  index.html  package-lock.json  style.css  webrtc.html
www/src/: App.svelte
