# ========================================
# rtsp 静态库
# ========================================

# 暂时为空，待添加源文件后启用

# set(RTSP_SOURCES
#     # 添加源文件
# )

# set(RTSP_HEADERS
#     # 添加头文件
# )

# add_library(rtsp_lib STATIC ${RTSP_SOURCES} ${RTSP_HEADERS})

# target_include_directories(rtsp_lib
#     PUBLIC
#         ${CMAKE_CURRENT_SOURCE_DIR}
#         ${LUCKFOX_MPI_INCLUDE_DIR}
# )

# target_link_libraries(rtsp_lib
#     PRIVATE
#         spdlog::spdlog
# )
