# ========================================
# webrtc 静态库
# ========================================

# 暂时为空，待添加源文件后启用

# set(WEBRTC_SOURCES
#     # 添加源文件
# )

# set(WEBRTC_HEADERS
#     # 添加头文件
# )

# add_library(webrtc_lib STATIC ${WEBRTC_SOURCES} ${WEBRTC_HEADERS})

# target_include_directories(webrtc_lib
#     PUBLIC
#         ${CMAKE_CURRENT_SOURCE_DIR}
#         ${LIBDATACHANNEL_PATH}/include
# )

# target_link_libraries(webrtc_lib
#     PRIVATE
#         spdlog::spdlog
#         # datachannel  # libdatachannel 启用后取消注释
# )
